# vqm-cpp

./: CMakeLists.txt  LICENSE
include/: Calibration.hpp  FeatureExtractor.hpp  Options.hpp  VQM.hpp
src/: FeatureExtractor.cpp  Options.cpp  VQM.cpp  main.cpp
